# intro-to-software-development

./: .gitconfig  .gitignore  LICENCE  LICENSE  LISENCE  README.md  pyproject.toml  test_calculations.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: ci.yaml
.github/workflows/: ci.yaml  ci.yml
course_documentation/: README.md  intro_to_unit_testing.md  introduction.md  useful_links.md
course_documentation/exercises/: 0_working_environment.md  1_setup_package_structure.md  2_writing_you_first_test.md  3_continuous_integration.md  4_implement_gardners_equation.md  5_optional_exercises.md  6_more_on_unit_testing.md
course_documentation/exercises/7_refactor/: 7_refactor_with_confidence.md  important_code.py  test_important_code.py
course_documentation/resources/: LICENSE_template  README_template.md  ci_template.yaml  pyproject_template.toml
course_documentation/tips_and_tricks/: adding_new_remote.md
src/geo_calculator/: LICENSE  __init__.py  calculations.py  dataset.py  visualizations.py
src/geo_calculator/rolling_stone/: exceptions.py  player.py
src/rolling_stone/: game.py  player.py  stone.py
tests/: test_calculations.py
tests/rolling_stone/: test_player.py
