[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-calculator"
authors = [{ name = "<Valerii Martell>" }]
description = "Introduction to Software Development course and demo Python package"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/valerii-martell/intro-to-software-development-test"